# hse-fastapi-autotest

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: fast_api_autotest.yml
hse_fastapi_autotest/: conftest.py  test.py
hse_fastapi_autotest/cmd/: commands.py
hse_fastapi_autotest/commands/: commands.py
hse_fastapi_autotest/services/: abstract_schema_parser.py  app_finder.py  openapi_schema_parser.py  service_layer.py  test_path_parser.py  testing_services.py
hse_fastapi_autotest/services/finders/: app_finder.py
hse_fastapi_autotest/services/generators/: base_generator.py  body_generator.py  param_generator.py
hse_fastapi_autotest/services/helpers/: log.py  utils.py
hse_fastapi_autotest/services/shema_parsers/: testing_metadata_parser.py
hse_fastapi_autotest/settings/: loggger.py
hse_fastapi_autotest/test_app/: test_e2e.py  test_yaml.py
src/: conftest.py  test_main.py
src/helpers/: repo_getter.py
src/services/: app_finder.py  openapi_schema_parser.py
src/test_app/: test_e2e.py  test_yaml.py
test_data/: reference.json
