[tool.poetry]
name = "hse-fastapi-autotest"
version = "0.1.0"
description = "Fast api automation tool for testing. Package is aimed to test apps based on a given openapi schema."
authors = ["Dmitry <kachkindmitry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.4"
fastapi = "^0.109.0"
gitpython = "^3.1.41"
openapi3-parser = "^1.1.16"
pylint = "^3.0.4"
httpx = "^0.27.0"
flake8 = "^7.0.0"
pytest-html = "^4.1.1"
lxml = "^5.1.0"
pylint-report = "^2.4.0"
flake8-html = "^0.4.3"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pre-commit = "^3.5.0"
isort = "^5.12.0"

[tool.poetry.scripts]
fast_api_test = "hse_fastapi_autotest.cmd.commands:run_tests"

[tool.black]
line_length = 88
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | venv
  | build
  | dist
)/
'''


[tool.isort]
profile = "black"
multi_line_output = 3


[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = "*.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pylint.main]
fail-under = 10
ignore = ["data"]
ignored-modules = ["test"]
py-version = "3.10"
suggestion-mode = true

[tool.pylint.basic]
bad-names = ["foo", "bar", "baz", "toto", "tutu", "tata"]
class-attribute-naming-style = "any"
class-const-naming-style = "UPPER_CASE"
class-naming-style = "PascalCase"
const-naming-style = "UPPER_CASE"
function-naming-style = "snake_case"
property-classes = ["abc.abstractproperty"]


[tool.pylint.format]
ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$"
indent-after-paren = 4
indent-string = "    "
max-line-length = 88
max-module-lines = 1000


[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "import-error",
    "arguments-differ",
    "R0801",
    "logging-fstring-interpolation",
    "invalid-all-format",
    "W0621",
    "missing-parentheses-for-call-in-test",
    "using-constant-test"
]


good-names = []

[tool.pytest.ini_options]
asyncio_mode= "strict"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(levelname)-5.5s [%(name)s] %(message)s"
addopts = [
  "-p no:warnings",
]



[tool.pylint.similarities]
ignore-imports = true
ignore-docstrings = true
ignore-comments = true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
