[metadata]
name = client
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.10




[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    client

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1

[pbr]
warnerrors = true
skip_changelog = true
skip_authors = true
skip_reno = true
